--- a/Cosmopolitan/pom.xml
+++ b/Cosmopolitan/pom.xml
@@ -58,6 +58,10 @@
 			<artifactId>hibernate-jpa-2.1-api</artifactId>
 			<version>1.0.0.Final</version>
 		</dependency>
+		<dependency>
+			<groupId>javax.transaction</groupId>
+			<artifactId>javax.transaction-api</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
