Converted resultset to JSON

--- a/Cosmopolitan/pom.xml
+++ b/Cosmopolitan/pom.xml
@@ -49,6 +49,10 @@
 			<artifactId>spring-orm</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-json-org</artifactId>
+		</dependency>
 	</dependencies>
 
 
