--- a/Cosmopolitan/pom.xml
+++ b/Cosmopolitan/pom.xml
@@ -53,6 +53,12 @@
 			<groupId>com.fasterxml.jackson.datatype</groupId>
 			<artifactId>jackson-datatype-json-org</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.jacoco</groupId>
+			<artifactId>jacoco-maven-plugin</artifactId>
+			<version>0.7.7.201606060606</version>
+			<type>maven-plugin</type>
+		</dependency>
 	</dependencies>
 
 
