--- a/Cosmopolitan/pom.xml
+++ b/Cosmopolitan/pom.xml
@@ -33,7 +33,7 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>runtime</scope>
+			<scope>compile</scope>
 		</dependency>
 
 		<!-- MySQL database driver -->
